--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ Metrics/AbcSize:
 Style/Documentation:
   Enabled: false
 
+Style/MutableConstant:
+  Enabled: false
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
